Revert "GPTUBE-66 Create endpoint for dashboard videos (#67)"
This reverts commit b6240d45c4dcde8787a313639ce3592a19b000f2.
