# gptube/gptube-api/generated-api/models/ModelsYoutubeVideoDashboard.ts
@@ -1,96 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * GPTube API swagger docs
- * This is the API documentation of GPTube
- *
- * The version of the OpenAPI document: 1.0
- * Contact: luckly083@gmail.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-import type { YoutubeVideoSnippet } from './YoutubeVideoSnippet';
-import {
-    YoutubeVideoSnippetFromJSON,
-    YoutubeVideoSnippetFromJSONTyped,
-    YoutubeVideoSnippetToJSON,
-} from './YoutubeVideoSnippet';
-
-/**
- * 
- * @export
- * @interface ModelsYoutubeVideoDashboard
- */
-export interface ModelsYoutubeVideoDashboard {
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelsYoutubeVideoDashboard
-     */
-    createdAt?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelsYoutubeVideoDashboard
-     */
-    lastUpdate?: string;
-    /**
-     * 
-     * @type {YoutubeVideoSnippet}
-     * @memberof ModelsYoutubeVideoDashboard
-     */
-    snippet?: YoutubeVideoSnippet;
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelsYoutubeVideoDashboard
-     */
-    videoId?: string;
-}
-
-/**
- * Check if a given object implements the ModelsYoutubeVideoDashboard interface.
- */
-export function instanceOfModelsYoutubeVideoDashboard(value: object): boolean {
-    let isInstance = true;
-
-    return isInstance;
-}
-
-export function ModelsYoutubeVideoDashboardFromJSON(json: any): ModelsYoutubeVideoDashboard {
-    return ModelsYoutubeVideoDashboardFromJSONTyped(json, false);
-}
-
-export function ModelsYoutubeVideoDashboardFromJSONTyped(json: any, ignoreDiscriminator: boolean): ModelsYoutubeVideoDashboard {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'createdAt': !exists(json, 'created_at') ? undefined : json['created_at'],
-        'lastUpdate': !exists(json, 'last_update') ? undefined : json['last_update'],
-        'snippet': !exists(json, 'snippet') ? undefined : YoutubeVideoSnippetFromJSON(json['snippet']),
-        'videoId': !exists(json, 'video_id') ? undefined : json['video_id'],
-    };
-}
-
-export function ModelsYoutubeVideoDashboardToJSON(value?: ModelsYoutubeVideoDashboard | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'created_at': value.createdAt,
-        'last_update': value.lastUpdate,
-        'snippet': YoutubeVideoSnippetToJSON(value.snippet),
-        'video_id': value.videoId,
-    };
-}
-
